--- a/layouts/general.html
+++ b/layouts/general.html
@@ -12,18 +12,22 @@
       <div class="container">
         <p class="logo">CRISTO SALVADOR</p>
         <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-        <a href="#alInicio"
-          ><img src="../media/ESCUDOCARM.png" alt="" class="logoC"
-        /></a>
-        <a href="./index.html" class="nombre">INICIO </a>
+        <a href="#alInicio">
+          <img src="../media/ESCUDOCARM.png" alt="" class="logoC" />
+        </a>
+        <a href="./index.html" class="nombre">INICIO</a>
       </div>
     </header>
-    <br /><br />
+    <br />
+    <br />
     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <h1 class="init"></h1>
     <h3 class="cita">
-      "No aceptes como Verdad lo que no proviene del Amor, <br />
-      ni aceptes como Amor lo que no proviene de la Verdad" <br />EDITH STEIN
+      "No aceptes como Verdad lo que no proviene del Amor,
+      <br />
+      ni aceptes como Amor lo que no proviene de la Verdad"
+      <br />
+      EDITH STEIN
     </h3>
 
     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
@@ -45,49 +49,49 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
@@ -101,49 +105,49 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
@@ -151,7 +155,7 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
@@ -166,56 +170,56 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
@@ -230,56 +234,56 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
@@ -294,56 +298,74 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p></p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
@@ -358,56 +380,80 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
@@ -422,56 +468,80 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
